navbar updates and table responiveness

--- a/remdesivir.html
+++ b/remdesivir.html
@@ -30,7 +30,7 @@
     </div>
     <!--link for leads form-->
     <div class="container form-container">
-        <h4 class="remdisivirHeading">If you have leads for Remdesivir, 
+        <h4 class="remdisivirHeading ">If you have leads for Remdesivir, 
             <span><input type="submit" name="submit" class="submitButton" value="Click here" onclick="document.location='remdevisirForm.html'" />
             </span>
         </h4>
@@ -85,7 +85,7 @@
     </div>
     <!--table-->
 
-    <div class="container-fluid table-responsive">
+    <div class="container-fluid" style="overflow-x:auto;">
         
         <table class="table table-bordered table-striped" id='remdesivir-table'>
             <thead>
