--- a/oxygenrefill.html
+++ b/oxygenrefill.html
@@ -31,7 +31,7 @@
     <!--link for leads form-->
     <div class="container form-container">
         <h4 class="remdisivirHeading ">If you have leads for Oxygen Refill, 
-            <span><input type="submit" name="submit" class="submitButton" value="Click here" onclick="document.location='oxygenrefillForm.html'" />
+            <span><input type="submit" name="submit" class="submitButton" value="Click here" onclick="document.location='oxygenRefillForm.html'" />
             </span>
         </h4>
         
