--- a/remdevisirForm.html
+++ b/remdevisirForm.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     
     <!--custom css-->
-    <link rel="stylesheet" href="/CSS/remdesivir.css">
+    <link rel="stylesheet" href="/CSS/form.css">
 
     <!--calling navbar-->
     <script>
