navbar top fixed

--- a/volunteerForm.html
+++ b/volunteerForm.html
@@ -70,7 +70,8 @@
                     <td><input type="file" name="" id=""></td>
                 </tr>
                 <tr>
-                    td
+                    <td class="field"><label for="message"></label></td>
+                    <td><textarea name="entry.624226762" id="message" rows="3"></textarea></td>
                 </tr>
             </table>
         </form>
