--- a/remdesivir.html
+++ b/remdesivir.html
@@ -30,7 +30,7 @@
     </div>
     <!--link for leads form-->
     <div class="container form-container">
-        <h4 class="remdisivirHeading ">If you have leads for Remdesivir, 
+        <h4 class="remdisivirHeading ">If you have Medicinal Leads, 
             <span><input type="submit" name="submit" class="submitButton" value="Click here" onclick="document.location='remdevisirForm.html'" />
             </span>
         </h4>
