--- a/volunteerForm.html
+++ b/volunteerForm.html
@@ -31,7 +31,7 @@
     <!--volunteer form-->
     <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted){window.location='thankyou.html';}"></iframe>
     <div class="container form-container">
-        <form action='https://docs.google.com/forms/d/e/1FAIpQLSeKjNVjRv_UG2WrtkNGmbczq6aqUBL3d_IO2H9rpnmSl27_8w/formResponse' method="post" target="hidden_iframe" onsubmit="submitted= true;">
+        <form action='https://docs.google.com/forms/u/0/d/e/1FAIpQLSeKjNVjRv_UG2WrtkNGmbczq6aqUBL3d_IO2H9rpnmSl27_8w/formResponse' method="post" target="hidden_iframe" onsubmit="submitted= true;">
             <table class="form-table">
                 <tr>
                     <td class="field"><label for="name">Name</label></td>
@@ -66,14 +66,11 @@
                     <td><textarea name="entry.1619989301" id="work"  rows="3"></textarea></td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="id proof">Please provide your address proof</label></td>
-                    <td><input type="file" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td class="field"><label for="message"></label></td>
+                    <td class="field"><label for="message">Drop your message here</label></td>
                     <td><textarea name="entry.624226762" id="message" rows="3"></textarea></td>
                 </tr>
             </table>
+            <input type="submit" name="submit" class="submitButton button2" value="Submit" />
         </form>
     </div>
     
