Adding of Disclaimer

--- a/Donor.html
+++ b/Donor.html
@@ -30,12 +30,13 @@
     </div>
     <!--link for leads form-->
     <div class="container form-container">
-        <h4 class="remdisivirHeading ">If you are a donor, 
+        <h4 class="remdisivirHeading ">If you have recovered from Covid, Please save someone's life by being a plasma donor. 
             <span><input type="submit" name="submit" class="submitButton" value="Click here" onclick="document.location='DonorForm.html'" />
             </span>
         </h4>
         
-        
+        <span > <span style="color: red; font-weight: bolder;">Disclaimer:</span> We aim to be a source of help to people in need by providing them some emergency contacts. This is being done in order to save lives. These leads are found via social media and google searches, we try our best to verify them but hold no responsibility for any of them and neither are we promoting them. We recommend that you follow your doctor’s prescription. Stay safe and help others. </span>
+
     </div>
     <!--filters-->
     <div class="container filter-container">
