--- a/DonorForm.html
+++ b/DonorForm.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container form-container">
-        <h4 class="remdisivirHeading ">If you are a Donor, Please fill this form.
+        <h4 class="remdisivirHeading ">If you have recovered from Covid, Please save someone's life by being a plasma donor.
             
         </h4>
     </div>
