--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script>
         $(function(){
             
-            $( "#navbar" ).load( "./nav.html",function(){
+            $( "#navbar" ).load( "/nav.html",function(){
             });
         });
     </script>
