--- a/thankyou.html
+++ b/thankyou.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     
     <!--custom css-->
-    <link rel="stylesheet" href="/CSS/remdesivir.css">
+    <link rel="stylesheet" href="/remdesivir.css">
     <!--redirection to index.html-->
     <meta http-equiv = "refresh" content = "3; 'index.html'" />
 
@@ -20,7 +20,7 @@
     <script>
         $(function(){
             
-            $( "#navbar" ).load( "./components/nav.html",function(){
+            $( "#navbar" ).load( "/nav.html",function(){
             });
         });
     </script>
