donorForm error fixed

--- a/DonorForm.html
+++ b/DonorForm.html
@@ -12,13 +12,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     
     <!--custom css-->
-    <link rel="stylesheet" href="./CSS/form.css">
+    <link rel="stylesheet" href="/form.css">
 
     <!--calling navbar-->
     <script>
         $(function(){
             
-            $( "#navbar" ).load( "./components/nav.html",function(){
+            $( "#navbar" ).load( "/nav.html",function(){
             });
         });
     </script>
