navbar and donor form fixed

--- a/DonorForm.html
+++ b/DonorForm.html
@@ -91,7 +91,7 @@
                     <td><input type="text" name="City" placeholder="Please enter city:"></td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="state">Distributor's Name</label></td>
+                    <td class="field"><label for="state">Donor's Name</label></td>
                     <td><input type="text" name="Distributor Name" placeholder="Please enter Distributor's name:"></td>
                 </tr>
                 <tr>
