--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/CSS/nav.css"/>
+    <link rel="stylesheet" href="/nav.css"/>
     
 </head>
 <body>
