--- a/DonorForm.html
+++ b/DonorForm.html
@@ -87,23 +87,23 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="state">City</label></td>
+                    <td class="field"><label for="city">City</label></td>
                     <td><input type="text" name="City" placeholder="Please enter city:"></td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="state">Donor's Name</label></td>
+                    <td class="field"><label for="donor">Donor's Name</label></td>
                     <td><input type="text" name="Distributor Name" placeholder="Please enter Distributor's name:"></td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="state">Address</label></td>
+                    <td class="field"><label for="address">Address</label></td>
                     <td><textarea name="Address" rows="2" placeholder="Please enter Distributor's address:"></textarea></td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="state">E-mail Address</label></td>
+                    <td class="field"><label for="email">E-mail Address</label></td>
                     <td><input type="email" name="E-Mail Address" placeholder="Please enter Distributor's email:"></td>
                 </tr>
                 <tr>
-                    <td class="field"><label for="state">Contact Number</label></td>
+                    <td class="field"><label for="number">Contact Number</label></td>
                     <td><input type="tel" name="Telephone" placeholder="Please enter Distributor's contact number:"></td>
                 </tr>
                 <tr>
