--- a/DonorForm.html
+++ b/DonorForm.html
@@ -92,19 +92,19 @@
                 </tr>
                 <tr>
                     <td class="field"><label for="donor">Donor's Name</label></td>
-                    <td><input type="text" name="Distributor Name" placeholder="Please enter Distributor's name:"></td>
+                    <td><input type="text" name="Distributor Name" placeholder="Please enter name:"></td>
                 </tr>
                 <tr>
                     <td class="field"><label for="address">Address</label></td>
-                    <td><textarea name="Address" rows="2" placeholder="Please enter Distributor's address:"></textarea></td>
+                    <td><textarea name="Address" rows="2" placeholder="Please enter address:"></textarea></td>
                 </tr>
                 <tr>
                     <td class="field"><label for="email">E-mail Address</label></td>
-                    <td><input type="email" name="E-Mail Address" placeholder="Please enter Distributor's email:"></td>
+                    <td><input type="email" name="E-Mail Address" placeholder="Please enter email:"></td>
                 </tr>
                 <tr>
                     <td class="field"><label for="number">Contact Number</label></td>
-                    <td><input type="tel" name="Telephone" placeholder="Please enter Distributor's contact number:"></td>
+                    <td><input type="tel" name="Telephone" placeholder="Please enter contact number:"></td>
                 </tr>
                 <tr>
                     <td class="field"><label for="remarks">Remarks</label></td>
