--- a/nav.html
+++ b/nav.html
@@ -16,12 +16,12 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="../oxygenrefill.html">Oxygen Refill</a></li>
-            <li><a href="../oxygenconcentrator.html">Oxygen Concentrator</a></li>
-            <li><a href="../Donor.html">Plasma</a></li>
-            <li><a href="../HospitalBeds.html">Hospital beds</a></li>
-            <li><a href="../remdesivir.html">Medical leads</a></li>
-            <li><a href="../volunteerForm.html">Volunteer</a></li>
+            <li><a href="./oxygenrefill.html">Oxygen Refill</a></li>
+            <li><a href="./oxygenconcentrator.html">Oxygen Concentrator</a></li>
+            <li><a href="./Donor.html">Plasma</a></li>
+            <li><a href="./HospitalBeds.html">Hospital beds</a></li>
+            <li><a href="./remdesivir.html">Medical leads</a></li>
+            <li><a href="./volunteerForm.html">Volunteer</a></li>
         </ul>
     </nav>
     <script src="/JS/nav.js"></script>
