--- a/nav.html
+++ b/nav.html
@@ -24,6 +24,6 @@
             <li><a href="./volunteerForm.html">Volunteer</a></li>
         </ul>
     </nav>
-    <script src="/JS/nav.js"></script>
+    <script src="/nav.js"></script>
 </body>
 </html> 
