--- a/index.html
+++ b/index.html
@@ -149,4 +149,7 @@
     </script>
     
 </body>
+    
+     <a href='http://www.freevisitorcounters.com'>Counter</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e3711aa6fe776ff9af02edcc84672f220cd51e25'></script>
+<script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/825103/t/0"></script>
 </html>
